Fixing the supporting of continuous integration (with Maven) to compile the xtext projects. Adding the correspoding clean plugins.